# francine

./: .gitignore  .pre-commit-config.yaml  README.md  cli.py  pyproject.toml
.github/workflows/: ci.yml
db/: mydb.json
francine/: cli.py  config.py
francine/models/: task.py
francine/repositories/: base.py  tinydb.py
francine/services/: task.py
tests/: test_repositories.py  test_services.py
